<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42A6AF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity2">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:background="@drawable/custom_login"
      app:cardCornerRadius="50dp"
      app:cardElevation="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="727dp"
        android:layout_gravity="center_horizontal"
        android:background="#3A7E3B"
        android:backgroundTint="#00C54949"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/applications"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textSize="42sp"
            android:padding="2dp"/>

       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:background="#3A7E3B"
           android:backgroundTint="#00C54949"
           android:orientation="vertical"
           android:padding="24dp">

           <ImageView
               android:id="@+id/youtube"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_row="0"
               android:layout_column="0"
               android:contentDescription="@string/youtube"
               android:layout_marginTop="50dp"
               app:srcCompat="@drawable/youtube_logo" />

           <ImageView
               android:id="@+id/ticket"
               android:layout_width="84dp"
               android:layout_height="wrap_content"
               android:layout_row="0"
               android:layout_column="1"
               android:layout_marginTop="50dp"
               android:layout_marginLeft="15dp"
               android:contentDescription="@string/irctc"
               app:srcCompat="@drawable/irctc_logo" />
       </GridLayout>


        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_gravity="center"
            android:text="@string/log_out" />

    </LinearLayout>

  </androidx.cardview.widget.CardView>


</LinearLayout>
